[package]
name = "capsicum-net"
description = "Rust bindings to FreeBSD's cap_net library"
version = "0.1.0"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["capsicum", "freebsd", "network"]
exclude = [
    ".gitignore",
    "coverage.sh"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-freebsd",
]

[features]
default = []

[dependencies]
bitflags = { version = "2.4" }
capsicum = { version = "0.3.0", features = ["casper"] }
casper-sys = { version = "0.1.1" }
cstr = "0.2.0"
libc = "0.2.147"
nix = { version = "0.27.0", features = [ "net", "socket" ] }
tokio = { version = "1.27.0", default-features = false, features = ["net"], optional = true}

[dev-dependencies]
ctor = "0.2.3"
libc = "0.2.147"
tempfile = "3.4"
tokio = { version = "1.27.0", features = ["macros", "rt"] }

[[test]] 
name = "functional"
path = "tests/functional/mod.rs"

[patch.crates-io]
capsicum = { git = "https://github.com/asomers/capsicum-rs", rev = "f5fd1e6"}
casper-sys = { git = "https://github.com/asomers/capsicum-rs", rev = "f5fd1e6"}
