[package]
name = "capsicum-net"
description = "Rust bindings to FreeBSD's cap_net library"
version = "0.1.0"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["capsicum", "freebsd", "network"]
repository = "https://github.com/asomers/capsicum-net"
documentation = "https://docs.rs/capsicum-net"
categories = ["os::freebsd-apis"]
keywords = ["sandbox", "FreeBSD", "capsicum"]
rust-version = "1.77.0"
exclude = [
    ".gitignore",
    "coverage.sh"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-freebsd",
]

[features]
default = []

[dependencies]
bitflags = { version = "2.4" }
capsicum = { version = "0.4.2", features = ["casper"] }
casper-sys = { version = "0.1.1" }
libc = "0.2.153"
nix = { version = ">=0.28.0,<0.30.0", features = [ "net", "socket" ] }
tokio = { version = "1.27.0", default-features = false, features = ["net"], optional = true}

[dev-dependencies]
ctor = "0.2.3"
tempfile = "3.4"
tokio = { version = "1.27.0", features = ["macros", "rt"] }

[[test]] 
name = "functional"
path = "tests/functional/mod.rs"
